--- a/app/views/hosts/new.html.erb
+++ b/app/views/hosts/new.html.erb
@@ -1,4 +1,3 @@
-<h1>Host Attendees</h1>
-<p>Could be the start of some great new friendships.</p>
+<h1>Offer to Host an Attendee</h1>
 
 <%= render 'form' %>
