--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,15 +14,13 @@
 
 <div class="activity">
 	<h2>Talk to a Local</h2>
-			<p>Need recommendations on where to eat, drink or sleep?</p>
-
 
 	<div style="margin-bottom:30px">
 		<script src="http://railsconf.pockethotline.com/widget.js" type="text/javascript"></script>
 		<div id="pockethotline"></div>
 	</div>
 
-	<p class="normal"><%= link_to 'Answer some calls', 'http://railsconf.pockethotline.com/volunteer' %> if your a local.</p>
+	<p class="normal"><%= link_to 'Answer some calls', 'http://railsconf.pockethotline.com/volunteer', :class => 'btn btn-success' %> if your a local.</p>
 </div>
 
 <div class="activity">
@@ -34,10 +32,8 @@
 	<p><%= link_to 'Apply to Stay with a Local', new_guest_path, :class => 'btn btn-large btn-primary' %></p>
 
 	<p class="normal">
-		<%= link_to 'Let us know', new_host_path %> if you'd be willing to host guests in your home.
+		<%= link_to 'Host some visitors', new_host_path, :class => 'btn btn-success' %> if you're a local.
 	</p>
-
-	<p class="normal"><small>Props to the <%= link_to "B'more on Rails", 'http://bmoreonrails.org/' %> crew for the idea.</small></p>
 </div>
 
 <div class="activity">
@@ -46,7 +42,7 @@
 		A hand-picked list of the best that Austin offers.
 	</p>
 
-	<ul>
+	<ul id="favorites">
 		<% @favorites.each do |favorite| %>
 			<li>
 				<h3><%= link_to_unless favorite.website.blank?, favorite.name, favorite.website %></h3>
@@ -58,5 +54,7 @@
 		<% end %>
 	</ul>
 
-	<p class="normal"><%= link_to 'Suggest a new favorite', new_favorite_path, :class => 'btn btn-success' %></p>
+	<p class="normal">
+		<%= link_to 'Suggest some favorites', new_favorite_path, :class => 'btn btn-success' %> if you're a local.
+	</p>
 </div>
