--- a/app/views/favorites/_form.html.erb
+++ b/app/views/favorites/_form.html.erb
@@ -41,6 +41,15 @@
     </div>
   </div>
 
+  <% unless @favorite.new_record? %>
+    <div class="control-group">
+      <%= f.label :approved %>
+      <div class="controls">
+        <%= f.check_box :approved %>
+      </div>
+    </div>
+  <% end %>
+
   <div class="form-actions">
     <%= f.submit :class => 'btn btn-primary' %>
   </div>
