--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,7 +20,7 @@
 		<div id="pockethotline"></div>
 	</div>
 
-	<p class="normal"><%= link_to 'Answer some calls', 'http://railsconf.pockethotline.com/volunteer', :class => 'btn btn-success' %> if your a local.</p>
+	<p class="normal"><%= link_to 'Answer some calls', 'http://railsconf.pockethotline.com/volunteer', :class => 'btn btn-success' %> if you're a local.</p>
 </div>
 
 <div class="activity">
