--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -26,7 +26,7 @@
 <div class="activity">
 	<h2>Stay with a Local</h2>
 	<p>
-		A few locals have agreed to host attendees in their homes.
+		<%= pluralize(Host.all.length, 'local') %> have agreed to host <%= pluralize(Host.all.collect(&:number_of_guests).sum, 'attendee') %> in their homes.
 	</p>
 
 	<p><%= link_to 'Apply to Stay with a Local', new_guest_path, :class => 'btn btn-large btn-primary' %></p>
